--- a/banco-front/src/App.css
+++ b/banco-front/src/App.css
@@ -1,5 +1,16 @@
+
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -28,6 +39,10 @@
   color: #61dafb;
 }
 
+header{
+  position: relative;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +51,21 @@
     transform: rotate(360deg);
   }
 }
+
+footer {
+  width: 100%;
+  background-color: #282c34;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  position: sticky;
+  bottom: 0;
+
+}
+
+.content{
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 20px;
+}
+
