--- a/banco-front/src/App.css
+++ b/banco-front/src/App.css
@@ -69,3 +69,11 @@ footer {
   padding: 20px;
 }
 
+.user-config-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra el contenido horizontalmente */
+  justify-content: center; /* Centra el contenido verticalmente */
+  height: 35vh; /* Establece la altura al 100% de la ventana */
+}
+
