--- a/banco-front/src/App.css
+++ b/banco-front/src/App.css
@@ -42,6 +42,7 @@ footer {
   background-color: #282c34;
   color: black;
   text-align: center;
+  margin-top: 15px;
   padding: 10px 0;
   position: static;
   bottom: 0;
